* Avoid unneeded extending/iterating in Element#down, Element#next, Element#previous and Element#up. [Prototype LH #452] [eno, jddalton]

* Reorganize String.prototype extensions. [jddalton]

* Optimize String#camelize, String#gsub, String#inspect, String#sub and Template#evaluate by using String#replace. [jddalton, kangax]

* unit test: Comment-out benchmarks in the String unit tests. [jddalton]

* Add RegExp#clone to allow easy regexp cloning and changing of pattern flags. [jddalton]

* Ensure correct behavior of String#replace, in Safari 2, when passing a function as the `replacement` argument. [Prototype LH #534] [Dean Edwards, jddalon, kangax, Samuel Lebeau]

* Allow Element#insert, Element#update, and Element#replace to insert comment, document fragment, document type, and text nodes. [jddalton]

* Fix Element#update error on `buggy elements` when appending an element created by `toElement`. [jddalton]

* Optimize Array#inject to use Array#reduce if available. [jddalton, kangax]

* Fix bug in Array#concat substitution that caused it to exit early for falsy values. [jddalton]

* Optimize Class.create() and Class#addMethods and switch to using `this._super()`. [Joey Hurst, jddalton, John Resig]
  Note: Backwards compatibility warning.
    - The $super variable is no longer used to access a super's method.
      Intead use `this._super()` in the body of the subclassed method. 

* Rename Object.isOwnProperty() to Object.hasKey() and add Hash#hasKey. [apm, jddalton]

* Remove internal use of the $super variable in Fuse. [jddalton]

* Allow Element.addMethods() and Event.addMethods() to add `toString` and other special methods. [jddalton]
  Note: Additions to HTMLElement.prototype will be ignored if HTML<tagName>Element.prototype has an existing 
  property with the same name. Extending elements by tagName will get around the issue.
  
* Ensure correct use of the delete operator. [jddalton]
