@@ -21,22 +21,27 @@
         if (before === '\\') return arguments[2];
         if (object == null) return before;
 
-        // adds support for dot and bracket notation:
-        var ctx  = object, 
+        // adds support for dot and bracket notation
+        var comp, ctx = object, 
+         value   = ctx,
          expr    = arguments[3],
          pattern = /^([^.[]+|\[((?:.*?[^\\])?)\])(\.|\[|$)/,
          match   = pattern.exec(expr);
         if (match == null) return before;
 
         while (match != null) {
-          var comp = match[1].startsWith('[') ? match[2].replace(/\\]/g, ']') : match[1];
-          ctx = ctx[comp];
-          if (null == ctx || '' == match[3]) break;
-          expr = expr.substring('[' == match[3] ? match[1].length : match[0].length);
+          comp  = match[1].startsWith('[') ? match[2].replace(/\\]/g, ']') : match[1];
+          value = ctx[comp];
+          if (!Object.hasKey(ctx, comp) || value == null) {
+            value = ''; break;
+          }
+          if ('' == match[3]) break;
+          ctx   = value;
+          expr  = expr.substring('[' == match[3] ? match[1].length : match[0].length);
           match = pattern.exec(expr);
         }
 
-        return before + String.interpret(ctx);
+        return before + String.interpret(value);
       });
     }
 
