@@ -1,3 +1,5 @@
+* Ensure Template#evaluate does not evaluate inherited properties of the `object`. [jddalton, kangax]
+
 * Avoid unneeded extending/iterating in Element#down, Element#next, Element#previous and Element#up. [Prototype LH #452] [eno, jddalton]
 
 * Reorganize String.prototype extensions. [jddalton]
